# Manc_BioInf

./: README.md  main.py
.github/workflows/: codecov.yml
PythonProgramming/: environment.yml  helpful_python_commands.py  logger.py  pyproject.toml  requirements.txt  test.py
PythonProgramming/Python exercises/: Exercise 1.py  Exercise 2.py
PythonProgramming/Python_exercises/: Exercise_1.py  Exercise_2.py  Exercise_3.py  Exercise_4.py
PythonProgramming/Python_exercises/Exercise_1/: chunk_sequence.py
PythonProgramming/Python_exercises/Exercise_2/: DNA2Prot.py  Exercise_2.py  GC_content.py  convert2fasta.py  nucleotide_count.py  reverse_seq.py  six_frame_trans.py
PythonProgramming/Python_exercises/Exercise_3/: Exercise_3.py  U15422.1.fasta  amino_acid_counter.py  logger.py
PythonProgramming/Python_exercises/Exercise_4/: DNA2Prot.py  Exercise_4.py  reverse_seq.py  six_frame_trans.py
PythonProgramming/modules/: chunk_sequence.py  convert2fasta.py  nucleotide_count.py  six_frame_trans.py
PythonProgramming/tests/: .coverage  coverage.xml  junit.xml  pytest.ini  test_AAC.py  test_DNA2Prot.py  test_chunk_sequence.py  test_myfunctions.py
