[project]
name = 'PythonProgramming'
version = '0.0.1'
description = 'Includes the several scripts for sequence data manipulation.'
license = {file = 'LICENSE.txt'}
authors = [{name = 'Arjun Ryatt', email = 'arjun.ryatt@postgrad.manchester.ac.uk'}]
readme = 'README.md'
keywords = [
    'bioinformatics',
    'DNA Sequence',
]
requires-python = '>=3.12'

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',
    'License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)'
    'Programming language :: Python :: 3.12'
]

# Dynamically load dependencies
[tool.setuptools.dynamic]
dependencies = {file = ['requirements.txt']}

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ['.'] # Look for packages in the root directory
include = ['PythonProgramming*']

[build-system]
requires = ['setuptools>=45', 'setuptools_scm[toml]>=6.2', 'wheel']
build-backend = 'setuptools.build_meta'